create update function method updated
